--- a/Country.html
+++ b/Country.html
@@ -33,7 +33,7 @@
         </head>	
     
         <body>
-			 <a href = "Freshworks.html" class="previous round">&#8249;</a>
+			 <a href = "index.html" class="previous round">&#8249;</a>
             <div class = "container">
                 <h1 style = "text-align: center" id = "name"></h1>
                 <hr>
