--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <body>
 			<h1>E X P L O R E</h1>
             <form>
-                <input type = "text" name = "country_name" id = "country_name" placeholder="Search for a country" required/>
+                <input type = "text" name = "country_name" id = "country_name" placeholder="Search" required/>
                 <button type = "button" onclick = "searchCountry()" id = "search-btn"><span>GO</span></button>
             </form>  
 
